force-app/main/default/objects/Webhook_Event__c/Webhook_Event__c.object-meta.xml
<CustomObject>
    <description>Idempotency log for inbound webhooks (Stripe, DocuSign Connect, JIRA). Stores the provider's unique event ID with a Unique constraint so duplicate webhook deliveries are deduped at the DB layer. Apex webhook handlers query this object before processing; an existing row short-circuits with "already processed" 200 OK.</description>
    <label>Webhook Event</label>
    <nameField>
        <displayFormat>WE-{00000000}</displayFormat>
        <label>Webhook Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Webhook Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>