force-app/main/default/objects/Webhook_Event__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>If Status=Failed, captures the exception message + stack trace from the handler. Surfaced on the Integration Errors dashboard for ops triage.</description>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>