force-app/main/default/objects/Webhook_Event__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>Provider-specific event name. Examples: Stripe "checkout.session.completed", DocuSign "envelope-completed", JIRA "jira:issue_updated". Used to filter reports by event family.</description>
    <label>Event Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>