force-app/main/default/objects/Webhook_Event__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>Provider's unique event ID — Stripe evt_*, DocuSign envelopeId+event, JIRA issueKey+changelogTimestamp. Marked Unique so the DB blocks duplicate-event inserts even under race conditions (defense-in-depth alongside Apex pre-check).</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>