force-app/main/default/objects/Webhook_Event__c/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <description>Raw JSON body of the webhook for audit and replay. Truncated to 32K Long Text Area limit. Larger payloads stored as Attachments on the related record.</description>
    <label>Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>