force-app/main/default/objects/Webhook_Event__c/fields/Processed_At__c.field-meta.xml
<CustomField>
    <fullName>Processed_At__c</fullName>
    <description>Timestamp when the webhook handler completed (successfully or with failure). Used to compute end-to-end latency vs CreatedDate.</description>
    <label>Processed At</label>
    <type>DateTime</type>
</CustomField>