force-app/main/default/objects/Webhook_Event__c/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <description>Polymorphic SF record ID that the webhook acted on — Order for JIRA, Contract for DocuSign, Invoice for Stripe. Kept as Text 18 (not a real lookup) because the parent type varies per Source.</description>
    <label>Related Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>