force-app/main/default/objects/Webhook_Event__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Processing lifecycle. Received = inserted, processing not yet started. Processed = handler completed successfully. Failed = handler raised exception (see Error_Message__c). Duplicate = a later webhook attempt that the idempotency layer short-circuited (rare path, mostly logged for debugging at-least-once delivery behavior).</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Received</fullName>
                <default>true</default>
                <label>Received</label>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>